Search part 7 (Fix bug search result on mobile

--- a/src/components/ProductItem/ProductItem.module.scss
+++ b/src/components/ProductItem/ProductItem.module.scss
@@ -20,6 +20,14 @@
         }
     }
 
+    @include mobile {
+        gap: 0;
+
+        .image + .info {
+            margin-left: 1rem;
+        }
+    }
+
     .name {
         display: -webkit-box;
         -webkit-box-orient: vertical;
